refactor: continue to make PMD happy
yes this is silly, but still.